--- a/cyberpunk css_files/cyberpunk.css
+++ b/cyberpunk css_files/cyberpunk.css
@@ -8,24 +8,24 @@
 /*#region fonts*/
 @font-face 
 {
-    font-family:BlenderProBook;
+    font-family: "BlenderProBook";
     font-style:normal;
     font-weight:400;
-    src: url('fonts/BlenderProBook.woff2') format("woff2");
+    src: url("fonts/BlenderProBook.woff2") format("woff2");
 }
 
 @font-face 
 {
-    font-family: Oxanium;
+    font-family: "Oxanium";
     font-style: normal;
     font-weight: 400;
-    src: url('fonts/Oxanium.woff2') format('woff2');
+    src: url("fonts/Oxanium.woff2") format("woff2");
 }
 
 @font-face 
 {
-    font-family: Cyberpunk;
-    src: url('fonts/Cyberpunk.otf format') format('opentype');
+    font-family: "Cyberpunk";
+    src: url("fonts/Cyberpunk.otf") format("opentype");
 }
 /*#endregion*/
 
