--- a/cyberpunk css_files/cyberpunk.css
+++ b/cyberpunk css_files/cyberpunk.css
@@ -11,7 +11,7 @@
     font-family: "BlenderProBook";
     font-style:normal;
     font-weight:400;
-    src: url(GuardiaBugambilia.github.io/fonts/BlenderProBook.woff2) format("woff2");
+    src: url(Cyberpunk%20css_files/fonts/BlenderProBook.woff2) format("woff2");
 }
 
 @font-face 
@@ -19,13 +19,13 @@
     font-family: "Oxanium";
     font-style: normal;
     font-weight: 400;
-    src: url(GuardiaBugambilia.github.io/fonts/Oxanium.woff2) format("woff2");
+    src: url(Cyberpunk%20css_files/fonts/Oxanium.woff2) format("woff2");
 }
 
 @font-face 
 {
     font-family: "Cyberpunk";
-    src: url(GuardiaBugambilia/fonts/Cyberpunk.otf) format("opentype");
+    src: url(Cyberpunk%20css_files/fonts/Cyberpunk.otf) format("opentype");
 }
 /*#endregion*/
 
