--- a/cyberpunk css_files/cyberpunk.css
+++ b/cyberpunk css_files/cyberpunk.css
@@ -9,9 +9,9 @@
 @font-face 
 {
     font-family: "BlenderProBook";
-    font-style:normal;
-    font-weight:400;
-    src: url(Cyberpunk%20css_files/fonts/BlenderBook.woff2) format("woff2");
+    font-style: normal;
+    font-weight: 400;
+    src: url(Cyberpunk%20css_files/fonts/BlenderBook.woff2);
 }
 
 @font-face 
@@ -19,13 +19,13 @@
     font-family: "Oxanium";
     font-style: normal;
     font-weight: 400;
-    src: url(Cyberpunk%20css_files/fonts/Oxanium.woff2) format("woff2");
+    src: url(Cyberpunk%20css_files/fonts/Oxanium.woff2);
 }
 
 @font-face 
 {
     font-family: "Cyberpunk";
-    src: url(Cyberpunk%20css_files/fonts/Cyberpunk.otf) format("opentype");
+    src: url(Cyberpunk%20css_files/fonts/Cyberpunk.otf);
 }
 /*#endregion*/
 
