--- a/cyberpunk css_files/cyberpunk.css
+++ b/cyberpunk css_files/cyberpunk.css
@@ -11,7 +11,7 @@
     font-family: "BlenderProBook";
     font-style: normal;
     font-weight: 400;
-    src: url(Cyberpunk%20css_files/fonts/BlenderBook.woff2);
+    src: url("https://github.com/GuardiaBugambilia/GuardiaBugambilia.github.io/blob/main/cyberpunk%20css_files/fonts/BlenderBook.woff2");
 }
 
 @font-face 
