--- a/cyberpunk css_files/cyberpunk.css
+++ b/cyberpunk css_files/cyberpunk.css
@@ -19,13 +19,13 @@
     font-family: "Oxanium";
     font-style: normal;
     font-weight: 400;
-    src: url(Cyberpunk%20css_files/fonts/Oxanium.woff2);
+    src: url("Cyberpunk%20css_files/fonts/Oxanium.woff2");
 }
 
 @font-face 
 {
     font-family: "Cyberpunk";
-    src: url(Cyberpunk%20css_files/fonts/Cyberpunk.otf);
+    src: url("https://github.com/GuardiaBugambilia/GuardiaBugambilia.github.io/blob/main/cyberpunk%20css_files/fonts/Cyberpunk.otf");
 }
 /*#endregion*/
 
